Changelog
=========

.01 
-------------------
- Basic proof-of-concept implementation
- Added TinyMCE plugin

.02
-------------------
- Added ability to embed youtube videos.

.03
-------------------
- Extended TinyMCE plugin to make snippets "clickable" in the edit page.
- Added snippet browser window to TinyMCE plugin.
- Removed support for YouTube embedding (other products handle this better).