@@ -1,4 +1,4 @@
-<?xml version=".3"?>
+<?xml version=".8a"?>
 <metadata>
   <version>0001</version>
 </metadata>
