@@ -17,11 +17,6 @@ class TestSnippetParser(BaseTest):
 
     layer = UWOSH_SNIPPETS_INTEGRATION_TESTING
 
-    def test_find_ids(self):
-        sp = SnippetParser()
-        ids = sp.findIds(self.testString)
-
-        self.assertEqual(ids[0], self.doc.getId())
 
     def test_replace_ids(self):
         sp = SnippetParser()
